Fixed flex wrap

--- a/src/BookBarter.React/src/pages/Home/Home.module.css
+++ b/src/BookBarter.React/src/pages/Home/Home.module.css
@@ -140,3 +140,7 @@
 .topSearchBar {
   width: 80%;
 }
+
+.input {
+  flex-wrap: wrap;
+}
